--- a/.github/actions/conan/Dockerfile
+++ b/.github/actions/conan/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y software-properties-common sudo       \
       build-essential perl python python3 python3-pip git make cmake           \
       libfontconfig1-dev libxcb1-dev libx11-dev libc6-dev libgl1-mesa-dev      \
       '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev \
-      xcb-proto
+      xcb-proto xorg-dev
 
 RUN sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
 RUN apt-get update && apt-get -y build-dep qt5-default
