--- a/.github/actions/conan/Dockerfile
+++ b/.github/actions/conan/Dockerfile
@@ -1,7 +1,8 @@
-FROM ubuntu:bionic
+FROM ubuntu:focal
 
-RUN apt-get update && apt-get install -y software-properties-common sudo       \
-      gcc-7 g++-7 gcc-8 g++-8                                                  \
+RUN apt-get update                                                             \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y                          \
+      software-properties-common sudo gcc-9 g++-9                              \
       build-essential perl python python3 python3-pip git make cmake           \
       libfontconfig1-dev libxcb1-dev libx11-dev libc6-dev libgl1-mesa-dev      \
       '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev \
