[qt] Add debug static build

--- a/.github/workflows/Build-qt.yml
+++ b/.github/workflows/Build-qt.yml
@@ -23,6 +23,7 @@ jobs:
           - gcc
         build_type:
           - Release
+          - Debug
         shared:
           - "False"
         qt_version:
