[qt] Release shared build

--- a/.github/workflows/Build-qt.yml
+++ b/.github/workflows/Build-qt.yml
@@ -25,6 +25,7 @@ jobs:
           - Release
         shared:
           - "False"
+          - "True"
         qt_version:
           - 5.15.1
     env:
