--- a/.github/workflows/Update-docker-images.yml
+++ b/.github/workflows/Update-docker-images.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          version: 3.8
+          python-version: 3.8
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel requests markdownify semver gitpython PyGithub
