--- a/clion/Dockerfile_2020.3.1
+++ b/clion/Dockerfile_2020.3.1
@@ -1,6 +1,6 @@
-FROM ubuntu:bionic
+FROM ubuntu:focal
 
-ENV DOWNLOAD_URL=https://download.jetbrains.com/cpp/CLion-2020.3.tar.gz
+ENV DOWNLOAD_URL=https://download.jetbrains.com/cpp/CLion-2020.3.1.tar.gz
 ENV CLION_HOME=/etc/clion
 ADD common/entrypoint.sh /usr/local/bin/entrypoint.sh
 ADD common/setup.sh /tmp/setup.sh
@@ -23,12 +23,10 @@ RUN /tmp/setup.sh                                 \
     python3-dev                \
     python3-pip                \
     python3-setuptools         \
-    python3.6                  \
-    python3.7                  \
+    python3.8                  \
     zlib1g-dev                 \
  && apt-get clean              \
                                \
- && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 100 \
  && python3 -m pip install -U  \
     setuptools wheel virtualenv\
                                \
