[qttest] Update to ubuntu 20.04

--- a/qttest/Dockerfile
+++ b/qttest/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:xenial
+FROM ubuntu:20.04
 
 ENV DEBIAN_FRONTEND noninteractive
 
@@ -10,13 +10,13 @@ RUN apt-get update \
         gir1.2-gtk-2.0          \
         imagemagick             \
         libdbus-1-3             \
-        libdouble-conversion1v5 \
+        libdouble-conversion3   \
         libegl1-mesa            \
         libfontconfig1          \
         libgl1-mesa-glx         \
         libharfbuzz0b           \
         libmtdev1               \
-        libpng12-0              \
+        libpng16-16             \
         libsm6                  \
         libstdc++6              \
         libx11-6                \
@@ -26,26 +26,30 @@ RUN apt-get update \
         libxkbcommon-x11-0      \
         libxkbcommon0           \
         libxrender1             \
-        python-matplotlib       \
-        python-pillow           \
-        python-pip              \
-        python-wxgtk3.0         \
-        python-wxtools          \
-        python-setuptools       \
+        python3-matplotlib      \
+        python3-pillow          \
+        python3-pip             \
+        python3-wxgtk4.0        \
         wx3.0-i18n              \
         xvfb                    \
  && apt-get clean               \
- && pip install -U pip wheel setuptools                      \
- && pip install pyscreenshot pyvirtualdisplay easyprocess -V \
-                                                             \
- && cd /tmp/               && find . -delete                 \
- && cd /var/lib/apt/lists/ && find . -delete                 \
+ && python3 -m pip install -U   \
+     pip                        \
+     wheel                      \
+     setuptools                 \
+ && python3 -m pip install      \
+     pyscreenshot               \
+     pyvirtualdisplay           \
+     easyprocess                \
+                                \
+ && cd /tmp/               && find . -delete \
+ && cd /var/lib/apt/lists/ && find . -delete \
  && cd /var/tmp/           && find . -delete
 
 ARG BUILD_DATE
 ARG VCS_REF
-LABEL maintainer=alex@nls.la                                                   \
-      org.label-schema.build-date=$BUILD_DATE                                  \
-      org.label-schema.vcs-ref=$VCS_REF                                        \
-      org.label-schema.vcs-type="git"                                          \
+LABEL maintainer=alex@nls.la                                 \
+      org.label-schema.build-date=$BUILD_DATE                \
+      org.label-schema.vcs-ref=$VCS_REF                      \
+      org.label-schema.vcs-type="git"                        \
       org.label-schema.vcs-url="https://github.com/approximator/Dockerfiles"
